gcc/testsuite/rust/rustc/ui/parser/issue-14303-fn-def.rs
fn foo<'a, T, 'b>(x: &'a T) {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

